# ReceiptToSheet

./: README.md  pyproject.toml
receipt_to_sheet/: receipt_to_sheet.py
